@@ -1,5 +1,9 @@
 2007-06-24  Hector E. Gomez Morales <hectoregm@gmail.com> 
 
+	* DocumentTagTable.cs, DocumentTag.cs: Deleted HasText property.
+
+2007-06-24  Hector E. Gomez Morales <hectoregm@gmail.com> 
+
 	* DocumentBufferArchiver.cs: Changed Serialize to use the new attribute
 	  IsText and the new associated tags to serialize the buffer.
 	* DocumentTagTable.cs: Adding *:Text tags that represents patches of
